--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://18-219-62-187:8761
+eureka.client.service-url.defaultZone=http://18.219.62.187:8761/eureka
