--- a/application-db.properties
+++ b/application-db.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://157.45.234.16:3306/testdb
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=root@123
 spring.jpa.hibernate.ddl-auto=update
