--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://18.223.33.140:8761/eureka
